--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="Portfolio1 Portfolio">
       <div class="img_box"> 
        <a href="Netflix.web/netflix-index.html" target="_blank">
-        <img src="images/netflix-bg.jpg" class="Portfolios_img">
+        <img src="./netflix-bg.jpg" class="Portfolios_img">
       </a> 
      </div>
       <div class="portfolio_text">
@@ -102,7 +102,7 @@
 
     <div class="Portfolio">
       <div class="img_box"> 
-        <a href="youtube/youtube-index.html" target="_blank"><img src="images/youtube-img.jpg" class="Portfolios_img"></a>
+        <a href="youtube/youtube-index.html" target="_blank"><img src="./youtube-img.jpg" class="Portfolios_img"></a>
      </div>
       <div class="portfolio_text">
         <p>
@@ -118,7 +118,7 @@
 
      <div class="Portfolio">
       <div class="img_box"> 
-       <a href="socialbook.web/facebook-index.html" target="_blank"><img src="images/facebook-img.jpg" class="Portfolios_img"></a> 
+       <a href="socialbook.web/facebook-index.html" target="_blank"><img src="./facebook-img.jpg" class="Portfolios_img"></a> 
      </div>
       <div class="portfolio_text">
         <p>
