--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <div class="Portfolio">
       <div class="img_box"> 
-        <a href="youtube/youtube-index.html" target="_blank"><img src="./youtube-img.jpg" class="Portfolios_img"></a>
+        <a href="youtube/youtube-index.html" target="_blank"><img src="youtube-img.jpg" class="Portfolios_img"></a>
      </div>
       <div class="portfolio_text">
         <p>
