--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <section class="contact" id="contact">
   <h2  class="sub_header">Contact</h2>
     <div class="contact-container">
-      <!-- <div class="social_media">
+      <div class="social_media">
     
         <a href="#Facebook">
         <div class="facebook"> 
@@ -225,7 +225,7 @@
           <div class="sms"><p>+233536386223</p></i> 
            </div>
         </a>
-    </div> -->
+    </div>
   <div class="email">
          <h2>Send An E-mail</h2>
     <div class="email-container">
