--- a/index.html
+++ b/index.html
@@ -153,23 +153,23 @@
     <h2 class="category">Genuine Projects</h2>
     <div class="mini-portfolio-group">
       <div class="mini-portfolio">
-      <img src="images/netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+      <img src="netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
         loram amet, consectetur adipisicing elit. Distinctio.</h6></div>
     </div>
     <div class="mini-portfolio">
-      <img src="images/netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+      <img src="netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
         loram amet, consectetur adipisicing elit. Distinctio.</h6></div>
     </div>
     <div class="mini-portfolio">
-      <img src="images/netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+      <img src="netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
         sit amet, consectetur adipisicing elit. Distinctio.</h6></div>
     </div>
     <div class="mini-portfolio">
-      <img src="images/netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+      <img src="netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
         loram amet, consectetur adipisicing elit. Distinctio.</h6></div>
     </div>
     <div class="mini-portfolio">
-      <img src="images/netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+      <img src="netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
         loram amet, consectetur adipisicing elit. Distinctio.</h6></div>
     </div>
   </div>
