--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width initial-scale=1.0">
   <title>Sire portfolio</title>
-  <link rel="website icon"type="png" href="images/profile.png">
+  <link rel="website icon"type="png" href="profile.png">
   <link rel="stylesheet" href="style.css"/>
   <script src="https://kit.fontawesome.com/2ee0d60911.js" crossorigin="anonymous"></script>
  </head>
@@ -20,7 +20,7 @@
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <title>Sire portfolio</title>
-    <link rel="website icon"type="png" href="images/profile.png">
+    <link rel="website icon"type="png" href="profile.png">
     <link rel="stylesheet" href="style.css"/>
     <script src="https://kit.fontawesome.com/2ee0d60911.js" crossorigin="anonymous"></script>
    </head>
@@ -102,7 +102,7 @@
       <div class="Portfolio1 Portfolio">
         <div class="img_box"> 
          <a href="Netflix.web/netflix-index.html" target="_blank">
-          <img src="images/netflix-bg.jpg" class="Portfolios_img">
+          <img src="netflix-bg.jpg" class="Portfolios_img">
         </a> 
        </div>
         <div class="portfolio_text">
@@ -118,7 +118,7 @@
   
       <div class="Portfolio">
         <div class="img_box"> 
-          <a href="youtube/youtube-index.html" target="_blank"><img src="images/youtube-img.jpg" class="Portfolios_img"></a>
+          <a href="youtube/youtube-index.html" target="_blank"><img src="youtube-img.jpg" class="Portfolios_img"></a>
        </div>
         <div class="portfolio_text">
           <p>
@@ -134,7 +134,7 @@
   
        <div class="Portfolio">
         <div class="img_box"> 
-         <a href="socialbook.web/facebook-index.html" target="_blank"><img src="images/facebook-img.jpg" class="Portfolios_img"></a> 
+         <a href="socialbook.web/facebook-index.html" target="_blank"><img src="facebook-img.jpg" class="Portfolios_img"></a> 
        </div>
         <div class="portfolio_text">
           <p>
