--- a/index.html
+++ b/index.html
@@ -137,23 +137,23 @@
   <h2 class="category">Genuine Projects</h2>
   <div class="mini-portfolio-group">
     <div class="mini-portfolio">
-    <img src="images/netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="image-search-img" alt=""><div class="text"><h4>Calculator</h4><br><h6>
       loram amet, consectetur adipisicing elit. Distinctio.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="images/netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="music-player-img" alt=""><div class="text"><h4>Calculator</h4><br><h6>
       loram amet, consectetur adipisicing elit. Distinctio.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="images/netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="calculator-img" alt=""><div class="text"><h4>Calculator</h4><br><h6>
       sit amet, consectetur adipisicing elit. Distinctio.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="images/netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="speech-convertor" alt=""><div class="text"><h4>Calculator</h4><br><h6>
       loram amet, consectetur adipisicing elit. Distinctio.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="images/netflix-bg.jpg" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="to-do-list-img" alt=""><div class="text"><h4>Calculator</h4><br><h6>
       loram amet, consectetur adipisicing elit. Distinctio.</h6></div>
   </div>
 </div>
@@ -235,22 +235,23 @@
 <section class="contact" id="contact">
   <h2  class="sub_header">Contact</h2>
     <div class="contact-container">
+
       <div class="social_media">
-    
         <a href="#Facebook">
         <div class="facebook"> 
-          <i class="fa-brands fa-facebook-f"><p>facebook</p></i>
+          <i class="fa-brands fa-facebook-f"></i><p>facebook</p>
           </div> 
         </a>
         <a href="#Whasapp">
-            <div class="whatsapp"> <i class="fa-brands fa-whatsapp"><p>Whatsapp</p></i> 
+            <div class="whatsapp"> <i class="fa-brands fa-whatsapp"></i> <p>Whatsapp</p>
             </div>
           </a>
         <a class="#SMS">
-          <div class="sms"><p>+233536386223</p></i> 
+          <div class="phone"></i> <p>+233536386223</p>
            </div>
         </a>
     </div>
+
   <div class="email">
          <h2>Send An E-mail</h2>
     <div class="email-container">
