--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="Portfolio1 Portfolio">
       <div class="img_box"> 
        <a href="Netflix.web/netflix-index.html" target="_blank">
-        <img src="netflix-bg.jpg" class="Portfolios_img">
+        <img src="images/netflix-bg.jpg" class="Portfolios_img">
       </a> 
      </div>
       <div class="portfolio_text">
@@ -102,7 +102,7 @@
 
     <div class="Portfolio">
       <div class="img_box"> 
-        <a href="youtube/youtube-index.html" target="_blank"><img src="youtube-img.jpg" class="Portfolios_img"></a>
+        <a href="youtube/youtube-index.html" target="_blank"><img src="images/youtube-img.jpg" class="Portfolios_img"></a>
      </div>
       <div class="portfolio_text">
         <p>
@@ -118,7 +118,7 @@
 
      <div class="Portfolio">
       <div class="img_box"> 
-       <a href="socialbook.web/facebook-index.html" target="_blank"><img src="facebook-img.jpg" class="Portfolios_img"></a> 
+       <a href="socialbook.web/facebook-index.html" target="_blank"><img src="images/facebook-img.jpg" class="Portfolios_img"></a> 
      </div>
       <div class="portfolio_text">
         <p>
@@ -137,24 +137,24 @@
   <h2 class="category">Genuine Projects</h2>
   <div class="mini-portfolio-group">
     <div class="mini-portfolio">
-    <img src="image-search-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
-      loram amet, consectetur adipisicing elit. Distinctio.</h6></div>
+    <img src="images/image-search-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    Search any image and get it your results through API.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="music-player-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
-      loram amet, consectetur adipisicing elit. Distinctio.</h6></div>
+    <img src="images/music-player-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+       Try out my favoriate music on this web music player.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="calculator-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
-      sit amet, consectetur adipisicing elit. Distinctio.</h6></div>
+    <img src="images/calculator-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+         Get your calculation done easily on this web calculator.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="speech-convertor.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
-      loram amet, consectetur adipisicing elit. Distinctio.</h6></div>
+    <img src="images/speech-convertor.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+      Convert text to speech to be raed to your hearing.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="to-do-list-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
-      loram amet, consectetur adipisicing elit. Distinctio.</h6></div>
+    <img src="images/to-do-list-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+      Make tasks easily with this web To-Do-App.</h6></div>
   </div>
 </div>
   
