--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="Portfolio1 Portfolio">
       <div class="img_box"> 
        <a href="Netflix.web/netflix-index.html" target="_blank">
-        <img src="images/netflix-bg.jpg" class="Portfolios_img">
+        <img src="netflix-bg.jpg" class="Portfolios_img">
       </a> 
      </div>
       <div class="portfolio_text">
@@ -100,25 +100,9 @@
       </div>
        </div>
 
-    <div class="Portfolio">
+           <div class="Portfolio">
       <div class="img_box"> 
-        <a href="youtube/youtube-index.html" target="_blank"><img src="images/youtube-img.jpg" class="Portfolios_img"></a>
-     </div>
-      <div class="portfolio_text">
-        <p>
-   Another day of coding eneded up making with a Youtube like Website,
-   which is worth checking out.
-        </p>
-    </div>
-    
-    <div class="portfolio_link">
-      <a href="youtube/youtube-index.html" target="_blank"><p>Learn More</p></a>
-    </div>
-     </div>
-
-     <div class="Portfolio">
-      <div class="img_box"> 
-       <a href="socialbook.web/facebook-index.html" target="_blank"><img src="images/facebook-img.jpg" class="Portfolios_img"></a> 
+       <a href="socialbook.web/facebook-index.html" target="_blank"><img src="facebook-img.jpg" class="Portfolios_img"></a> 
      </div>
       <div class="portfolio_text">
         <p>
@@ -132,28 +116,46 @@
     </div>
      </div>
 
+    <div class="Portfolio">
+      <div class="img_box"> 
+        <a href="youtube/youtube-index.html" target="_blank"><img src="youtube-img.jpg" class="Portfolios_img"></a>
+     </div>
+      <div class="portfolio_text">
+        <p>
+   Another day of coding eneded up making with a Youtube like Website,
+   which is worth checking out.
+        </p>
+    </div>
+    
+    <div class="portfolio_link">
+      <a href="youtube/youtube-index.html" target="_blank"><p>Learn More</p></a>
+    </div>
+     </div>
+
+
+
  </div>
  <div class="mini-portfolio-container">
   <h2 class="category">Genuine Projects</h2>
   <div class="mini-portfolio-group">
     <div class="mini-portfolio">
-    <img src="images/image-search-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="image-search-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
     Search any image and get it your results through API.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="images/music-player-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="music-player-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
        Try out my favoriate music on this web music player.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="images/calculator-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="calculator-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
          Get your calculation done easily on this web calculator.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="images/speech-convertor.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="speech-convertor.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
       Convert text to speech to be raed to your hearing.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="images/to-do-list-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="to-do-list-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
       Make tasks easily with this web To-Do-App.</h6></div>
   </div>
 </div>
