--- a/index.html
+++ b/index.html
@@ -137,23 +137,23 @@
   <h2 class="category">Genuine Projects</h2>
   <div class="mini-portfolio-group">
     <div class="mini-portfolio">
-    <img src="images/image-search-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="image-search-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
     Search any image and get it your results through API.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="images/music-player-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="music-player-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
        Try out my favoriate music on this web music player.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="images/calculator-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="calculator-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
          Get your calculation done easily on this web calculator.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="images/speech-convertor.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="speech-convertor.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
       Convert text to speech to be raed to your hearing.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="images/to-do-list-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="to-do-list-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
       Make tasks easily with this web To-Do-App.</h6></div>
   </div>
 </div>
