--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
   <h2 class="category">Genuine Projects</h2>
   <div class="mini-portfolio-group">
     <div class="mini-portfolio">
-    <img src="image-search-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="image-search-img.png" alt=""><div class="text"><h4>Image Search</h4><br><h6>
     Search any image and get it your results through API.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="music-player-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="music-player-img.png" alt=""><div class="text"><h4>Music Player</h4><br><h6>
        Try out my favoriate music on this web music player.</h6></div>
   </div>
   <div class="mini-portfolio">
@@ -151,11 +151,11 @@
          Get your calculation done easily on this web calculator.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="speech-convertor.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="speech-convertor.png" alt=""><div class="text"><h4>Speech <br>Convertor</h4><br><h6>
       Convert text to speech to be raed to your hearing.</h6></div>
   </div>
   <div class="mini-portfolio">
-    <img src="to-do-list-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
+    <img src="to-do-list-img.png" alt=""><div class="text"><h4>To-Do-App</h4><br><h6>
       Make tasks easily with this web To-Do-App.</h6></div>
   </div>
 </div>
