--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <h2 class="category">Genuine Projects</h2>
   <div class="mini-portfolio-group">
     <div class="mini-portfolio">
-    <img src="image-search-img.png" alt=""><div class="text"><h4>Image Search</h4><br><h6>
+    <img src="image-search-img.png" alt=""><div class="text"><h4>Search Image</h4><br><h6>
     Search any image and get it your results through API.</h6></div>
   </div>
   <div class="mini-portfolio">
