--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="portfolio_text">
         <p>
          Netflix mimicry Website made out curiosity amd ambition,
-         be at ease to click 'learn more' to have the real experience of netflix.
+        click 'learn more' to experience  netflix.
         </p>
       </div>
       <div class="portfolio_link">
