--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <div class="Portfolio1 Portfolio">
       <div class="img_box"> 
-       <a href="Netflix.web/netflix-index.html" target="_blank">
+       <a href="netflix-index.html" target="_blank">
         <img src="netflix-bg.jpg" class="Portfolios_img">
       </a> 
      </div>
@@ -96,13 +96,13 @@
         </p>
       </div>
       <div class="portfolio_link">
-        <a href="Netflix.web/netflix-index.html" target="_blank"><p>Learn More</p></a>
+        <a href="netflix-index.html" target="_blank"><p>Learn More</p></a>
       </div>
        </div>
 
            <div class="Portfolio">
       <div class="img_box"> 
-       <a href="socialbook.web/facebook-index.html" target="_blank"><img src="facebook-img.jpg" class="Portfolios_img"></a> 
+       <a href="facebook-index.html" target="_blank"><img src="facebook-img.jpg" class="Portfolios_img"></a> 
      </div>
       <div class="portfolio_text">
         <p>
@@ -112,13 +112,13 @@
     </div>
   
     <div class="portfolio_link">
-      <a href="socialbook.web/facebook-index.html" target="_blank"><p>Learn More</p></a>
+      <a href="facebook-index.html" target="_blank"><p>Learn More</p></a>
     </div>
      </div>
 
     <div class="Portfolio">
       <div class="img_box"> 
-        <a href="youtube/youtube-index.html" target="_blank"><img src="youtube-img.jpg" class="Portfolios_img"></a>
+        <a href="youtube-index.html" target="_blank"><img src="youtube-img.jpg" class="Portfolios_img"></a>
      </div>
       <div class="portfolio_text">
         <p>
@@ -128,7 +128,7 @@
     </div>
     
     <div class="portfolio_link">
-      <a href="youtube/youtube-index.html" target="_blank"><p>Learn More</p></a>
+      <a href="youtube-index.html" target="_blank"><p>Learn More</p></a>
     </div>
      </div>
 
