--- a/youtube-index.html
+++ b/youtube-index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube Website</title>
     <link rel="stylesheet" href="youtube-style.css">
-    <link rel="website icon"type="png" href="images/profile.png">
+    <link rel="website icon"type="png" href="profile.png">
     <script src="https://kit.fontawesome.com/2ee0d60911.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -24,7 +24,7 @@
             <div class="nav-right flex-div">
                 <i class="fa-solid fa-video"></i>
                 <i class="fa-regular fa-bell"></i>
-                <img src="images/profile.png" class="user">
+                <img src="profile.png" class="user">
             </div>
         </nav>
 <!-- -----------------------sidebar------------------ -->
@@ -41,24 +41,24 @@
     </div>
     <div class="subscribed-list">
         <h3>SUBSCRIBED</h3>
-        <a href="#"> <img src="images/profile.png" alt=""> <p>Sire Prince</p></a>
-        <a href="#"> <img src="images/profile.png" alt=""> <p>THE kING</p></a>
-        <a href="#"> <img src="images/profile.png" alt=""><p>Sire</p> </a>
-        <a href="#"> <img src="images/profile.png" alt=""> <p>Prince Akpadie</p></a>
-        <a href="#"> <img src="images/profile.png" alt="">  <p>Alpha Prince</p></a>
+        <a href="#"> <img src="profile.png" alt=""> <p>Sire Prince</p></a>
+        <a href="#"> <img src="profile.png" alt=""> <p>THE kING</p></a>
+        <a href="#"> <img src="profile.png" alt=""><p>Sire</p> </a>
+        <a href="#"> <img src="profile.png" alt=""> <p>Prince Akpadie</p></a>
+        <a href="#"> <img src="profile.png" alt="">  <p>Alpha Prince</p></a>
     </div>
 </div>
 <!-- -------------------------------------main------- --------------- -->
 
 <div class="container">
     <div class="banner">
-        <img src="images/youtube-img.jpg">
+        <img src="youtube-img.jpg">
     </div>
 <div class="list-container">
     <div class="vid-list">
-        <a href="playvid-1.html"><img src="images/thumbnail1-pic.jpg"class="thumbnail"></a>
+        <a href="playvid-1.html"><img src="thumbnail1-pic.jpg"class="thumbnail"></a>
      <div class="flex-div">
-            <img src="youtube-videos/thumbnail1.mp4" alt="">
+            <img src="thumbnail1.mp4" alt="">
             <div class="vid-info">
                 <a href="#">Best to learn all you have to know int the game of life</a>
                 <p>Sire Prince</p>
@@ -67,9 +67,9 @@
      </div>
  </div>
     <div class="vid-list">
-        <a href="playvid-2.html"><img src="images/thumbnail2-pic.jpg"class="thumbnail"></a>
+        <a href="playvid-2.html"><img src="thumbnail2-pic.jpg"class="thumbnail"></a>
      <div class="flex-div">
-            <img src="youtube-videos/thumbnail3.mp4" alt="">
+            <img src="thumbnail3.mp4" alt="">
             <div class="vid-info">
                 <a href="#">Best to learn all you have to know int the game of life</a>
                 <p>Sire Prince</p>
@@ -78,9 +78,9 @@
      </div>
  </div>
     <div class="vid-list">
-        <a href="playvid-3.html"><img src="images/thumbnail3-pic.jpg"class="thumbnail"></a>
+        <a href="playvid-3.html"><img src="thumbnail3-pic.jpg"class="thumbnail"></a>
      <div class="flex-div">
-            <img src="youtube-videos/thumbnail2.mp4" alt="">
+            <img src="thumbnail2.mp4" alt="">
             <div class="vid-info">
                 <a href="#">Best to learn all you have to know int the game of life</a>
                 <p>Sire Prince</p>
@@ -89,9 +89,9 @@
      </div>
  </div>
     <div class="vid-list">
-        <a href="playvid-6.html"><img src="images/thumbnail6-pic.jpg"class="thumbnail"></a>
+        <a href="playvid-6.html"><img src="thumbnail6-pic.jpg"class="thumbnail"></a>
      <div class="flex-div">
-            <img src="youtube-videos/thumbnail4.mp4" alt="">
+            <img src="thumbnail4.mp4" alt="">
             <div class="vid-info">
                 <a href="#">Best to learn all you have to know int the game of life</a>
                 <p>Sire Prince</p>
@@ -100,9 +100,9 @@
      </div>
  </div>
     <div class="vid-list">
-        <a href="playvid-5.html"><img src="images/thumbnail5-pic.jpg"class="thumbnail"></a>
+        <a href="playvid-5.html"><img src="thumbnail5-pic.jpg"class="thumbnail"></a>
      <div class="flex-div">
-            <img src="youtube-videos/thumbnail6.mp4" alt="">
+            <img src="thumbnail6.mp4" alt="">
             <div class="vid-info">
                 <a href="#">Best to learn all you have to know int the game of life</a>
                 <p>Sire Prince</p>
@@ -111,9 +111,9 @@
      </div>
  </div>
     <div class="vid-list">
-        <a href="playvid-4.html"><img src="images/thumbnail4-pic.jpg"class="thumbnail"></a>
+        <a href="playvid-4.html"><img src="thumbnail4-pic.jpg"class="thumbnail"></a>
      <div class="flex-div">
-            <img src="youtube-videos/thumbnail5.mp4" alt="">
+            <img src="thumbnail5.mp4" alt="">
             <div class="vid-info">
                 <a href="#">Best to learn all you have to know int the game of life</a>
                 <p>Sire Prince</p>
@@ -122,9 +122,9 @@
      </div>
  </div>
     <div class="vid-list">
-        <a href="playvid-7.html"><img src="images/thumbnail7-pic.jpg"class="thumbnail"></a>
+        <a href="playvid-7.html"><img src="thumbnail7-pic.jpg"class="thumbnail"></a>
      <div class="flex-div">
-            <img src="youtube-videos/thumbnail8.mp4" alt="">
+            <img src="thumbnail8.mp4" alt="">
             <div class="vid-info">
                 <a href="#">Best to learn all you have to know int the game of life</a>
                 <p>Sire Prince</p>
@@ -133,9 +133,9 @@
      </div>
  </div>
     <div class="vid-list">
-        <a href="playvid-8.html"><img src="images/thumbnail8-pic.jpg"class="thumbnail"></a>
+        <a href="playvid-8.html"><img src="thumbnail8-pic.jpg"class="thumbnail"></a>
      <div class="flex-div">
-            <img src="youtube-videos/thumbnail7.mp4" alt="">
+            <img src="thumbnail7.mp4" alt="">
             <div class="vid-info">
                 <a href="#">Best to learn all you have to know int the game of life</a>
                 <p>Sire Prince</p>
