--- a/netflix-index.html
+++ b/netflix-index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
-    <link rel="website icon" href="images/profile.png">
+    <link rel="website icon" href="profile.png">
     <link rel="stylesheet" href="netflix-style.css">
     <script src="https://kit.fontawesome.com/2ee0d60911.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="home">
         <nav>
-            <img src="images/logo.png" class="logo">
+            <img src="logo.png" class="logo">
             <div>
                 <button class="language-btn">English<i class="fa-sharp-duotone fa-solid fa-caret-down"></i></button>
                 <button>Sign In</button>
@@ -38,12 +38,12 @@
                 </p>
             </div>
             <div class="img-col">
-                <img src="images/net3.jpg">
+                <img src="net3.jpg">
             </div>
         </div>
         <div class="row">
             <div class="img-col">
-                <img src="images/net2.jpg" alt="">
+                <img src="net2.jpg" alt="">
             </div>
             <div class="text-col">
                 <h2>Download your shows to watch offline.</h2>
@@ -60,13 +60,13 @@
                 </p>
             </div>
             <div class="img-col">
-                <img src="images/net1.jpg" alt="">
+                <img src="net1.jpg" alt="">
             </div>
         </div>
 
         <div class="row">
             <div class="img-col">
-                <img src="images/net4.jpg" alt="">
+                <img src="net4.jpg" alt="">
             </div>
             <div class="text-col">
                 <h2>Create profiles for children.</h2>
