--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social_book Profile page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="facebook-style.css">
     <script src="https://kit.fontawesome.com/2ee0d60911.js" crossorigin="anonymous"></script>
 </head>
 <body>
