--- a/playvid-5.html
+++ b/playvid-5.html
@@ -32,7 +32,7 @@
     <div class="row">
         <div class="play-video">
             <video controls autoplay>
-                <source src="youtube-videos/thumbnail5.mp4" type="video/mp4">
+                <source src="thumbnail5.mp4" type="video/mp4">
             </video>
 
 <div class="tags">
