--- a/playvid-6.html
+++ b/playvid-6.html
@@ -24,7 +24,7 @@
         <div class="nav-right flex-div">
             <i class="fa-solid fa-video"></i>
             <i class="fa-regular fa-bell"></i>
-            <img src="images/profile.png" class="user">
+            <img src="profile.png" class="user">
         </div>
     </nav>
 
@@ -133,7 +133,7 @@
         </div>
         <div class="right-sidebar">
             <div class="side-video-list">
-                <a href="playvid-2.html" class="small-thumbnail"><img src="images/thumbnail2-pic.jpg"></a>
+                <a href="playvid-2.html" class="small-thumbnail"><img src="thumbnail2-pic.jpg"></a>
                 <div class="vid-info">
                     <a href="" >Best channel to learn web development.</a>
                     <p>Easy Tutorial</p>
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="side-video-list">
-         <a href="playvid-3.html" class="small-thumbnail"><img src="images/thumbnail3-pic.jpg"></a>
+         <a href="playvid-3.html" class="small-thumbnail"><img src="thumbnail3-pic.jpg"></a>
                 <div class="vid-info">
                     <a href="" >Best channel to learn web development.</a>
                     <p>Easy Tutorial</p>
@@ -149,7 +149,7 @@
                 </div>
             </div>
             <div class="side-video-list">
-         <a href="playvid-4.html" class="small-thumbnail"><img src="images/thumbnail4-pic.jpg"></a>
+         <a href="playvid-4.html" class="small-thumbnail"><img src="thumbnail4-pic.jpg"></a>
                 <div class="vid-info">
                     <a href="" >Best channel to learn web development.</a>
                     <p>Easy Tutorial</p>
@@ -157,7 +157,7 @@
                 </div>
             </div>
             <div class="side-video-list">
-         <a href="playvid-5.html" class="small-thumbnail"><img src="images/thumbnail5-pic.jpg"></a>
+         <a href="playvid-5.html" class="small-thumbnail"><img src="thumbnail5-pic.jpg"></a>
                 <div class="vid-info">
                     <a href="" >Best channel to learn web development.</a>
                     <p>Easy Tutorial</p>
@@ -166,7 +166,7 @@
             </div>
     
             <div class="side-video-list">
-         <a href="playvid-8.html" class="small-thumbnail"><img src="images/thumbnail6-pic.jpg"></a>
+         <a href="playvid-8.html" class="small-thumbnail"><img src="thumbnail6-pic.jpg"></a>
                 <div class="video-info">
                     <a href="" >Best channel to learn web development.</a>
                     <p>Easy Tutorial</p>
