--- a/playvid-2.html
+++ b/playvid-2.html
@@ -12,7 +12,7 @@
     <nav class="flex-div">
         <div class="nav-left flex-div">
            <div class="menu-icon"><i class="fa-solid fa-bars"></i></div> 
-            <div class="logo"> <a href="index.html"><i class="fa-brands fa-youtube"></i>YouTube</a></div>
+            <div class="logo"> <a href="youtube/index.html"><i class="fa-brands fa-youtube"></i>YouTube</a></div>
         </div>
         <div class="nav-middle flex-div">
         <div class="search-box flex-div">
