--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
        Try out my favoriate music on this web music player.</h6></div>
   </div>
 </a>
-<a href="calculaotr-index.html" target="_blank">
+<a href="calculator-index.html" target="_blank">
   <div class="mini-portfolio">
     <img src="calculator-img.png" alt=""><div class="text"><h4>Calculator</h4><br><h6>
          Get your calculation done easily on this web calculator.</h6></div>
