--- a/music-player-index.html
+++ b/music-player-index.html
@@ -19,11 +19,11 @@
                     <i class="fa-solid fa-bars"></i>
                 </div>
             </div>
-            <div class="img"><img src="files/sire.png" alt=""></div>
+            <div class="img"><img src="sire.png" alt=""></div>
             <h1>Cheque-Zoom</h1>
             <p>Cheque Razor EP</p>
             <audio controls width id="song">
-                <source src="files/Cheque-Zoom-(JustNaija.com).mp3">
+                <source src="Cheque-Zoom-(JustNaija.com).mp3">
             </audio>
             <input type="range" value="0" id="progress">
 
