--- a/calculator.html
+++ b/calculator.html
@@ -25,7 +25,7 @@
         <input type="text"  value="7"  onclick="display.value += '7'">
         <input type="text"  value="8"  onclick="display.value += '8'">
         <input type="text"  value="9"  onclick="display.value += '9'">
-        <input type="text"  value="*"  onclick="display.value += '*'"  class="operator">
+        <input type="numtextber"  value="*"  onclick="display.value += '*'"  class="operator">
       </div> 
       <div>
         <input type="text"  value="4"  onclick="display.value += '4'">
