--- a/facebook-index.html
+++ b/facebook-index.html
@@ -477,6 +477,6 @@
     <div class="footer">
         <p>Copyright &copy2024 - Sire Web Development Project </p>
     </div>
-    <script src="function.js"></script>
+    <script src="facebook-function.js"></script>
 </body>
 </html>
