--- a/calculator.html
+++ b/calculator.html
@@ -13,36 +13,36 @@
     <div class="calculator">
         <form>
        <div class="display">
-         <input type="text" name="display"   >
+         <input type="" name="display"   >
         </div>
        <div>
-        <input type="text"  value="AC" onclick="display.value = ''" class="operator">
-        <input type="text"  value="DE" onclick="display.value = display.value.toString().slice(0,-1)" class="operator">
-        <input type="text"  value="."  onclick="display.value += '.'"  class="operator">
-        <input type="text"  value="/"  onclick="display.value += '/' "  class="operator">
+        <input   value="AC" onclick="display.value = ''" class="operator">
+        <input   value="DE" onclick="display.value = display.value.toString().slice(0,-1)" class="operator">
+        <input   value="."  onclick="display.value += '.'"  class="operator">
+        <input   value="/"  onclick="display.value += '/' "  class="operator">
       </div> 
        <div>
-        <input type="text"  value="7"  onclick="display.value += '7'">
-        <input type="text"  value="8"  onclick="display.value += '8'">
-        <input type="text"  value="9"  onclick="display.value += '9'">
-        <input type="numtextber"  value="*"  onclick="display.value += '*'"  class="operator">
+        <input   value="7"  onclick="display.value += '7'">
+        <input   value="8"  onclick="display.value += '8'">
+        <input   value="9"  onclick="display.value += '9'">
+        <input   value="*"  onclick="display.value += '*'"  class="operator">
       </div> 
       <div>
-        <input type="text"  value="4"  onclick="display.value += '4'">
-        <input type="text"  value="5"  onclick="display.value += '5'">> 
-        <input type="text"  value="6"  onclick="display.value += '6'">
-        <input type="text"  value="-"  onclick="display.value += '-'"  class="operator">
+        <input   value="4"  onclick="display.value += '4'">
+        <input   value="5"  onclick="display.value += '5'">> 
+        <input   value="6"  onclick="display.value += '6'">
+        <input   value="-"  onclick="display.value += '-'"  class="operator">
       </div> 
       <div>
-        <input type="text"  value="1" onclick="display.value += '1'">
-        <input type="text"  value="2" onclick="display.value += '2'">
-        <input type="text"  value="3" onclick="display.value += '3'">
-        <input type="text"  value="+" onclick="display.value += '+'" class="operator">
+        <input   value="1" onclick="display.value += '1'">
+        <input   value="2" onclick="display.value += '2'">
+        <input   value="3" onclick="display.value += '3'">
+        <input   value="+" onclick="display.value += '+'" class="operator">
       </div>
       <div>
-        <input type="text"  value="00" onclick="display.value += '00'">
-        <input type="text"  value="0" onclick="display.value= '0'">
-        <input type="text"  value="=" onclick="display.value = eval(display.value)"  class="egual operator">
+        <input   value="00" onclick="display.value += '00'">
+        <input   value="0" onclick="display.value= '0'">
+        <input   value="=" onclick="display.value = eval(display.value)"  class="egual operator">
       </div> 
           </form>
     </div>
