--- a/calculator.html
+++ b/calculator.html
@@ -29,7 +29,7 @@
       </div> 
       <div>
         <input   value="4"  onclick="display.value += '4'">
-        <input   value="5"  onclick="display.value += '5'">> 
+        <input   value="5"  onclick="display.value += '5'">
         <input   value="6"  onclick="display.value += '6'">
         <input   value="-"  onclick="display.value += '-'"  class="operator">
       </div> 
