--- a/speech-convetor-index.html
+++ b/speech-convetor-index.html
@@ -19,11 +19,7 @@
                 </div>
             </select>
             <button>
-             <div class="play-container">
-                <span class="bar1"></span>
-                <span class="bar2"></span>
-                <span class="bar3"></span>
-            </div>Listen
+           Listen
         </button>
         </div>
 </div>
