--- a/music-player-index.html
+++ b/music-player-index.html
@@ -22,7 +22,7 @@
             <div class="img"><img src="sire.png" alt=""></div>
             <h1>Cheque-Zoom</h1>
             <p>Cheque Razor EP</p>
-            <audio controls width id="song">
+            <audio controls id="song">
                 <source src="Cheque-Zoom-(JustNaija.com).mp3">
             </audio>
             <input type="range" value="0" id="progress">
