--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
   <h2  class="sub_header">Contact</h2>
     <div class="contact-container">
 
-      <!-- <div class="social_media">
+      <div class="social_media">
         <a href="#Facebook">
         <div class="facebook"> 
           <i class="fa-brands fa-facebook-f"></i><p>facebook</p>
@@ -264,7 +264,7 @@
           <div class="phone"></i> <p>+233536386223</p>
            </div>
         </a>
-    </div> -->
+    </div>
 
   <div class="email">
          <h2>Send An E-mail</h2>
