--- a/index.html
+++ b/index.html
@@ -292,13 +292,13 @@
   </div>
 
 
-<!-- </div>
+</div>
 <footer>
   <h2>Sire Web Design, Copyright &copy  2024 | all rights reserved</h2>
 <a  href="#home"> 
      <i class="fa-solid fa-arrow-up-long"></i>
 </a>
-</footer> -->
+</footer>
   </section>
 
 <!----------------- scroll reveal ------------------------->
