--- a/index.html
+++ b/index.html
@@ -290,17 +290,19 @@
     </form>
   </div>
   </div>
-
-
 </div>
-<footer>
+
+
+  </section >
+<section class="footer-container">
+
   <h2>Sire Web Design, Copyright &copy  2024 | all rights reserved</h2>
 <a  href="#home"> 
      <i class="fa-solid fa-arrow-up-long"></i>
 </a>
-</footer>
-  </section>
 
+
+</section>
 <!----------------- scroll reveal ------------------------->
   <script src="https://unpkg.com/scrollreveal"></script>
 
